removes obsolete config options from osx install guide.